--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Balls 
+<!DOCTYPE html>
+<html>
+<title>Sam Vincent</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="icon" href="favicon.png">
+<style>
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+  background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fd%2Fd8%2FAntarctic%252C_adelie_penguins_(js)_19.jpg&f=1&nofb=1');
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+</style>
+<body>
+
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+    Balls
+  </div>
+  <div class="w3-display-middle">
+    <h1 class="w3-jumbo w3-animate-top">Sam Vincent</h1>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-large w3-center"> <a href="https://samflix.samvincent.cc">Samflix</a> </p>
+  </div>
+  <div class="w3-display-bottomleft w3-padding-large">
+    Powered by <a href="/balls/" target="_blank">Balls</a>
+  </div>
+</div>
+
+</body>
+</html>
