--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fd%2Fd8%2FAntarctic%252C_adelie_penguins_(js)_19.jpg&f=1&nofb=1');
+  background-image: href="penguin.jpg";
   min-height: 100%;
   background-position: center;
   background-size: cover;
