--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: href="/penguin.jpg";
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/d/d8/Antarctic%2C_adelie_penguins_(js)_19.jpg");
   min-height: 100%;
   background-position: center;
   background-size: cover;
