--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Sam Vincent</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://github.com/Samenologist/website/blob/24c48167b0296b3b375930e693473b71297b05ee/styles.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="icon" href="favicon.png">
 <style>
