--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
-<title>Sam Vincent</title>
+<title>?</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://github.com/Samenologist/website/blob/bba25565d8c12d99eecafbf508959a57c3346d2e/styles.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="icon" href="favicon.png">
 <style>
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url("https://github.com/Samenologist/website/blob/840f3d8a3b350d6a163eb67f8f7a196025ff05f8/penguin.jpg");
+  background-image: url('/w3images/forestbridge.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
@@ -20,15 +19,15 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Balls
+    can i help you?
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">Sam Vincent</h1>
+    <h1 class="w3-jumbo w3-animate-top">you shouldnt be here.</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center"> <a href="https://samflix.samvincent.cc">Samflix</a> </p>
+    <p class="w3-large w3-center">...</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="/balls/" target="_blank">Balls</a>
+    please leave.
   </div>
 </div>
 
