--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('https://github.com/Samenologist/website/blob/d84d8554567ad072a39cc0d437ddd0b0281666ff/penguin.jpg');
+  background-image: url("https://raw.githubusercontent.com/Samenologist/website/d84d8554567ad072a39cc0d437ddd0b0281666ff/penguin.jpg");
   min-height: 100%;
   background-position: center;
   background-size: cover;
