--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@ body, html {height: 100%}
 }
 </style>
 <body>
-
+mark {
+  background-color: yellow;
+  color: black;
+}  
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    can i help you?
+    <mark>can i help you?</mark>
   </div>
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">you shouldnt be here.</h1>
