--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@ body, html {height: 100%}
   min-height: 100%;
   background-position: center;
   background-size: cover;
+mark {
+  background-color: #3e3e3e;
+  color: black;
+}  
 }
 </style>
 <body>
-mark {
-  background-color: yellow;
-  color: black;
-}  
+
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
     <mark>can i help you?</mark>
