--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body, html {height: 100%}
   background-size: cover;
 mark {
   background-color: #3e3e3e;
-  color: black;
+  color: white;
 }  
 }
 </style>
