--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>?</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://github.com/Samenologist/website/blob/0e16a29b81187fc15b629957eff605fa56049027/styles.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
 body,h1 {font-family: "Raleway", sans-serif}
