--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="bg">
-<div class="text"><p><a href="https://duck.com">eeee errrr eeeee errrrr errrrrr</a ></div>
+<div class="text"><p><a href="https://samvincent.cc/about">eeee errrr eeeee errrrr errrrrr</a ></div>
 </div>
 </body>
 </html>
